--- a/src/main/webapp/WEB-INF/templates/public/cart.html
+++ b/src/main/webapp/WEB-INF/templates/public/cart.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="li">
 
 <head >
-    <title>Website bán hàng</title>
+    <title>Website</title>
     <meta name="description"
           content="Mua sách online hay, giá tốt nhất, combo sách hot bán chạy, giảm giá cực khủng cùng với những ưu đãi như miễn phí giao hàng, quà tặng miễn phí, đổi trả nhanh chóng. Đa dạng sản phẩm, đáp ứng mọi nhu cầu.">
     <meta name="keywords" content="nhà sách online, mua sách hay, sách hot, sách bán chạy, sách giảm giá nhiều">
@@ -69,7 +69,7 @@
             var email = $('#email1').val();
             if (password == ''  || email == '' ){
                 swal({
-                    title: 'Cần điền đầy đủ thông tin!',
+                    title: 'You need to fill in all the information!',
                     /* text: 'Redirecting...', */
                     icon: 'error',
                     timer: 3000,
@@ -91,7 +91,7 @@
                         success: function (data) {
                             if(data == "false_user"){
                                 swal({
-                                    title: 'Thông tin tài khoản không chính xác!',
+                                    title: 'Username or password incorrect!',
                                     /* text: 'Redirecting...', */
                                     icon: 'error',
                                     timer: 3000,
@@ -100,19 +100,19 @@
                                 })
                             }else if(data == "true"){
                                 swal({
-                                    title: 'Đăng nhập thành công !',
+                                    title: 'Login sucessfully!',
                                     /* text: 'Redirecting...', */
                                     icon: 'success',
-                                    timer: 3000,
+                                    timer: 5000,
                                     buttons: true,
                                     type: 'success'
                                 })
                                 setInterval(function(){
                                     location.reload()
-                                }, 2000);
+                                }, 3000);
                             } else {
                                 swal({
-                                    title: 'Tài khoản chưa xác thực vui lòng check mail!',
+                                    title: 'Unverified account please check mail!',
                                     /* text: 'Redirecting...', */
                                     icon: 'error',
                                     timer: 3000,
@@ -137,7 +137,7 @@
             var phoneNumber = $('#phoneNumber').val();
             if (password == '' || rePassword == '' || email == '' || fullName == '' || phoneNumber == ''){
                 swal({
-                    title: 'Cần điền đầy đủ thông tin!',
+                    title: 'You need to fill in all the information!',
                     /* text: 'Redirecting...', */
                     icon: 'error',
                     timer: 3000,
@@ -147,7 +147,7 @@
             } else {
                 if (password !== rePassword){
                     swal({
-                        title: 'Hai mật khẩu không trùng khớp!',
+                        title: 'Two passwords do not match!',
                         /* text: 'Redirecting...', */
                         icon: 'error',
                         timer: 3000,
@@ -171,7 +171,7 @@
                             success: function (data) {
                                 if(data == "exist"){
                                     swal({
-                                        title: 'Email đã tồn tại!',
+                                        title: "Email already exists!",
                                         /* text: 'Redirecting...', */
                                         icon: 'error',
                                         timer: 3000,
@@ -180,7 +180,7 @@
                                     })
                                 }else if(data == "true"){
                                     swal({
-                                        title: 'Đăng kí thành công!',
+                                        title: 'Register successfully!',
                                         /* text: 'Redirecting...', */
                                         icon: 'success',
                                         timer: 5000,
@@ -231,7 +231,7 @@
 <div th:if="${user_login}" >
     <script>
         swal({
-            title: 'Bạn cần phải đăng nhập',
+            title: 'You need login',
             /* text: 'Redirecting...', */
             icon: 'error',
             timer: 3000,
@@ -243,7 +243,7 @@
 <div th:if="${order_success}" >
     <script>
         swal({
-            title: 'Đặt hàng thành công',
+            title: 'Order successfully',
             /* text: 'Redirecting...', */
             icon: 'success',
             timer: 3000,
@@ -260,7 +260,8 @@
                 <div class="categoryheader">
                     <div class="noidungheader text-white">
                         <i class="fa fa-bars"></i>
-                        <span class="text-uppercase font-weight-bold ml-1">Danh mục sản phẩm</span>
+                        <span class="text-uppercase font-weight-bold ml-1">
+Product portfolio</span>
                     </div>
                     <!-- CATEGORIES -->
                     <div class="categorycontent">
@@ -288,7 +289,8 @@
                         <span>Hotline:<b>1900 1999</b> </span>
                     </div>
                     <i class="fas fa-comments-dollar"></i>
-                    <a href="#">Hỗ trợ trực tuyến </a>
+                    <a href="#">
+                        Online support </a>
                 </div>
             </div>
         </div>
@@ -299,8 +301,8 @@
 <section class="breadcrumbbar">
     <div class="container">
         <ol class="breadcrumb mb-0 p-0 bg-transparent">
-            <li class="breadcrumb-item"><a href="/public/home">Trang chủ</a></li>
-            <li class="breadcrumb-item active"><a href="/public/cart/index" >Giỏ hàng</a></li>
+            <li class="breadcrumb-item"><a href="/public/home">Home</a></li>
+            <li class="breadcrumb-item active"><a href="/public/cart/index" >Cart</a></li>
 
         </ol>
     </div>
@@ -312,24 +314,25 @@
                 <!-- giao diện giỏ hàng khi không có item  -->
                 <div class="col-12 cart-empty d-none">
                     <div th:if="${session.order == null}" class="py-3 pl-3">
-                        <h6  class="header-gio-hang">GIỎ HÀNG CỦA BẠN <span>(0 sản phẩm)</span></h6>
+                        <h6  class="header-gio-hang">YOUR CART<span>(0 item)</span></h6>
                         <div class="cart-empty-content w-100 text-center justify-content-center">
                             <img src="/public/images/shopping-cart-not-product.png" alt="shopping-cart-not-product">
-                            <p>Chưa có sản phẩm nào trong giở hàng của bạn</p>
-                            <a href="/public/home" class="btn nutmuathem mb-3">Mua thêm</a>
+                            <p>There are no products in your cart</p>
+                            <a href="/public/home" class="btn nutmuathem mb-3">
+                                Buy more</a>
                         </div>
                     </div>
 
                     <div th:if="${session.order != null}" class="py-3 pl-3">
-                        <h6 th:if="${session.order.getItemModels().size() == 0}" class="header-gio-hang">GIỎ HÀNG CỦA BẠN <span>(0 sản phẩm)</span></h6>
+                        <h6 th:if="${session.order.getItemModels().size() == 0}" class="header-gio-hang">YOUR CART <span>(0 item)</span></h6>
                         <div th:if="${session.order.getItemModels().size() == 0}" class="cart-empty-content w-100 text-center justify-content-center">
                             <img src="/public/images/shopping-cart-not-product.png" alt="shopping-cart-not-product">
-                            <p>Chưa có sản phẩm nào trong giở hàng của bạn</p>
-                            <a href="/public/home" class="btn nutmuathem mb-3">Mua thêm</a>
+                            <p>There are no products in your cart</p>
+                            <a href="/public/home" class="btn nutmuathem mb-3">Buy more</a>
                         </div>
                     </div>
                     <div th:if="${ session.order != null}" class="cart-content py-3 pl-3">
-                        <h6 th:if="${ session.order.getItemModels().size() != 0}" class="header-gio-hang">GIỎ HÀNG CỦA BẠN <span th:text="${session.order.getItemModels().size() +' sản phẩm'}">(1 sản phẩm)</span></h6>
+                        <h6 th:if="${ session.order.getItemModels().size() != 0}" class="header-gio-hang">YOUR CART <span th:text="${session.order.getItemModels().size() +' item'}">(1 sản phẩm)</span></h6>
                         <div th:if="${ session.order.getItemModels().size() != 0}" class="cart-list-items">
                             <th:block th:each="product : ${session.order.getItemModels()}">
                             <div class="cart-item d-flex">
@@ -359,27 +362,27 @@
                                     <form action="/public/cart/order" method="post" class="p-4 border rounded">
                                         <div class="row form-group">
                                             <div class="col-md-12 mb-3 mb-md-0">
-                                                <label class="text-black" for="fname">Địa chỉ</label>
-                                                <input type="text" id="fname" name="address" class="form-control" placeholder="Nhập địa chỉ nhận hàng" required>
+                                                <label class="text-black" for="fname">Address</label>
+                                                <input type="text" id="fname" name="address" class="form-control" placeholder="Enter address" required>
                                             </div>
                                         </div>
                                         <div class="row form-group mb-4">
                                             <div class="col-md-12 mb-3 mb-md-0">
-                                                <label class="text-black" for="fname">Số điện thoại</label>
-                                                <input type="text" id="fname" name="phoneNumber" class="form-control" placeholder="Nhập số điện thoại" required>
+                                                <label class="text-black" for="fname">Phone number</label>
+                                                <input type="text" id="fname" name="phoneNumber" class="form-control" placeholder="Enter phonenumber" required>
                                             </div>
                                         </div>
                                         <div class="row form-group mb-4">
                                             <div class="col-md-12 mb-3 mb-md-0">
-                                                <label class="text-black" for="fname">Ghi chú</label>
-                                                <textarea type="text" name="note" class="form-control" placeholder="Nhập ghi chú"></textarea>
+                                                <label class="text-black" for="fname">Note</label>
+                                                <textarea type="text" name="note" class="form-control" placeholder="Enter note"></textarea>
 
                                             </div>
                                         </div>
 
                                         <div class="row form-group">
                                             <div class="col-md-12">
-                                                <input type="submit" value="Đặt hàng" class="btn px-4 btn-danger text-white">
+                                                <input type="submit" value="Order" class="btn px-4 btn-danger text-white">
                                             </div>
                                         </div>
 
@@ -388,20 +391,22 @@
                             <div class="col-lg-6">
                                 <div class="tonggiatien" style="margin-right: 20px">
                                     <div class="group d-flex justify-content-between">
-                                        <p class="label">Tạm tính:</p>
+                                        <p class="label">
+                                            Provisional:</p>
                                         <p class="tamtinh" th:id="tamtinh" th:text="${#numbers.formatCurrency(session.order.total-30000)}">328.000 ₫</p>
                                     </div>
                                     <div class="group d-flex justify-content-between">
-                                        <p class="label">Phí vận chuyển:</p>
+                                        <p class="label">
+                                            Transport fee:</p>
                                         <p class="phivanchuyen">30.000 đ</p>
                                     </div>
 
                                     <div class="group d-flex justify-content-between align-items-center">
-                                        <strong class="text-uppercase">Tổng cộng:</strong>
+                                        <strong class="text-uppercase">Total:</strong>
                                         <p class="tongcong" th:id="tongtien" th:text="${#numbers.formatCurrency(session.order.total)}">328.000 ₫</p>
                                     </div>
                                     <small class="note d-flex justify-content-end text-muted">
-                                        (Giá đã bao gồm VAT)
+                                        (Prices include VAT)
                                     </small>
                                 </div>
                             </div>
@@ -412,7 +417,8 @@
                 <!-- giao diện giỏ hàng khi có hàng (phần comment màu xanh bên dưới là phần 2 sản phẩm trong giỏ hàng nhưng giờ đã demo bằng jquery) -->
                 <div class="col-md-8 cart">
                     <div class="cart-content py-3 pl-3">
-                         <h6 class="header-gio-hang">GIỎ HÀNG CỦA BẠN <span>(1 sản phẩm)</span></h6>
+                         <h6 class="header-gio-hang">
+                             YOUR CART<span>(1 sản phẩm)</span></h6>
                         <div class="cart-list-items">
 
                             <div class="cart-item d-flex">
