--- a/src/main/webapp/WEB-INF/templates/public/login.html
+++ b/src/main/webapp/WEB-INF/templates/public/login.html
@@ -32,8 +32,8 @@
     </header>
     <div th:if="${msg_register_success}" class="toast" data-delay="2500" style="position:fixed; top: 100PX; left: 40PX;z-index: 2000;width: 300px">
         <div class="toast-header" style="background-color: #1c7430">
-            <strong class="mr-auto" style="color: white">Thông báo</strong>
-            <small style="color: white">Vừa xong</small>
+            <strong class="mr-auto" style="color: white">Notice</strong>
+            <small style="color: white">Now</small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true" style="color: white">&times;</span>
             </button>
@@ -51,8 +51,8 @@
     <div th:if="${msg_register_error}" class="toast" data-delay="2500" style="position:fixed; top: 100PX; left: 10PX;z-index: 2000;width: 300px">
         <div class="toast-header" style="background-color: red">
 
-            <strong class="mr-auto" style="color: white">Thông báo</strong>
-            <small style="color: white">Vừa xong</small>
+            <strong class="mr-auto" style="color: white">Notice</strong>
+            <small style="color: white">Now</small>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true" style="color: white">&times;</span>
             </button>
