--- a/src/main/webapp/WEB-INF/templates/public/detail.html
+++ b/src/main/webapp/WEB-INF/templates/public/detail.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="li">
 
 <head >
-  <title>Website bán hàng</title>
+  <title>Website </title>
   <meta name="description"
         content="Mua sách online hay, giá tốt nhất, combo sách hot bán chạy, giảm giá cực khủng cùng với những ưu đãi như miễn phí giao hàng, quà tặng miễn phí, đổi trả nhanh chóng. Đa dạng sản phẩm, đáp ứng mọi nhu cầu.">
   <meta name="keywords" content="nhà sách online, mua sách hay, sách hot, sách bán chạy, sách giảm giá nhiều">
@@ -48,7 +48,7 @@
       var email = $('#email1').val();
       if (password == ''  || email == '' ){
         swal({
-          title: 'Cần điền đầy đủ thông tin!',
+          title: 'You need to fill in all the information!',
           /* text: 'Redirecting...', */
           icon: 'error',
           timer: 3000,
@@ -70,7 +70,7 @@
                   success: function (data) {
                     if(data == "false_user"){
                       swal({
-                        title: 'Thông tin tài khoản không chính xác!',
+                        title: 'Username or password incorrect!',
                         /* text: 'Redirecting...', */
                         icon: 'error',
                         timer: 3000,
@@ -79,7 +79,7 @@
                       })
                     }else if(data == "true"){
                       swal({
-                        title: 'Đăng nhập thành công !',
+                        title: 'Login sucessfully!',
                         /* text: 'Redirecting...', */
                         icon: 'success',
                         timer: 5000,
@@ -91,7 +91,7 @@
                       }, 3000);
                     } else {
                       swal({
-                        title: 'Tài khoản chưa xác thực vui lòng check mail!',
+                        title: 'Unverified account please check mail!',
                         /* text: 'Redirecting...', */
                         icon: 'error',
                         timer: 3000,
@@ -116,7 +116,7 @@
       var phoneNumber = $('#phoneNumber').val();
       if (password == '' || rePassword == '' || email == '' || fullName == '' || phoneNumber == ''){
         swal({
-          title: 'Cần điền đầy đủ thông tin!',
+          title: 'You need to fill in all the information!',
           /* text: 'Redirecting...', */
           icon: 'error',
           timer: 3000,
@@ -126,7 +126,7 @@
       } else {
         if (password !== rePassword){
           swal({
-            title: 'Hai mật khẩu không trùng khớp!',
+            title: 'Two passwords do not match!',
             /* text: 'Redirecting...', */
             icon: 'error',
             timer: 3000,
@@ -150,7 +150,7 @@
                     success: function (data) {
                       if(data == "exist"){
                         swal({
-                          title: 'Email đã tồn tại!',
+                          title: "Email already exists!",
                           /* text: 'Redirecting...', */
                           icon: 'error',
                           timer: 3000,
@@ -159,7 +159,7 @@
                         })
                       }else if(data == "true"){
                         swal({
-                          title: 'Đăng kí thành công!',
+                          title: 'Register successfully!',
                           /* text: 'Redirecting...', */
                           icon: 'success',
                           timer: 5000,
@@ -216,7 +216,7 @@
         <div class="categoryheader">
           <div class="noidungheader text-white">
             <i class="fa fa-bars"></i>
-            <span class="text-uppercase font-weight-bold ml-1">Danh mục sản phẩm</span>
+            <span class="text-uppercase font-weight-bold ml-1">Product portfolio</span>
           </div>
           <!-- CATEGORIES -->
           <div class="categorycontent">
@@ -244,7 +244,7 @@
             <span>Hotline:<b>1900 1999</b> </span>
           </div>
           <i class="fas fa-comments-dollar"></i>
-          <a href="#">Hỗ trợ trực tuyến </a>
+          <a href="#">Online support </a>
         </div>
       </div>
     </div>
@@ -255,7 +255,7 @@
 <section class="breadcrumbbar">
   <div class="container">
     <ol class="breadcrumb mb-0 p-0 bg-transparent">
-      <li class="breadcrumb-item"><a href="/public/home">Trang chủ</a></li>
+      <li class="breadcrumb-item"><a href="/public/home">Home</a></li>
       <li class="breadcrumb-item active"><a th:href="'/public/product/'+${product.category.id}" th:text="${product.category.name}">Sách mới tuyển chọn</a></li>
 
     </ol>
@@ -296,24 +296,24 @@
             </div>
             <div class="col-md-7">
               <div class="gia">
-                <div class="giabia">Giá gốc:<span class="giacu ml-2" th:text="${#numbers.formatCurrency(product.price)}"></span></div>
-                <div class="giaban">Giá khuyến mãi: <span
+                <div class="giabia">Price:<span class="giacu ml-2" th:text="${#numbers.formatCurrency(product.price)}"></span></div>
+                <div class="giaban">Promotion price : <span
                         class="giamoi font-weight-bold" th:text="${#numbers.formatCurrency(product.price - (product.price * product.discount / 100))}">111.200 </span><span class="donvitien"> </span></div>
-                <div class="tietkiem">Tiết kiệm: <b th:text="${#numbers.formatCurrency(product.price - (product.price - (product.price * product.discount / 100)))}">27.800 ₫</b> <span class="sale">-20%</span>
+                <div class="tietkiem">Save: <b th:text="${#numbers.formatCurrency(product.price - (product.price - (product.price * product.discount / 100)))}">27.800 ₫</b> <span class="sale">-20%</span>
                 </div>
               </div>
               <div class="uudai my-3">
-                <h6 class="header font-weight-bold">Khuyến mãi & Ưu đãi tại Fashion_Store:</h6>
+                <h6 class="header font-weight-bold">Promotions & Offers at Fashion_Store:</h6>
                 <ul>
-                  <li><b>Hỗ trợ giao hàng </b>cho đơn hàng từ 350.000đ ở TP.HCM và 600.000đ ở
-                    Tỉnh/Thành khác <a href="#" style="display: none">>> Chi tiết</a></li>
-                  <li><b>Combo sản phẩm HOT - GIẢM 25% </b><a href="#" style="display: none">>>Xem ngay</a></li>
+                  <li><b>Delivery support </b>for orders from 350.000đ in HCMC và 600.000đ ở
+                    Other Province/City <a href="#" style="display: none">Detail</a></li>
+                  <li><b>Product Combos HOT - Reduce 25% </b><a href="#" style="display: none">>> View now</a></li>
 <!--                  <li>Tặng Bookmark cho mỗi đơn hàng</li>-->
 <!--                  <li>Bao sách miễn phí (theo yêu cầu)</li>-->
                 </ul>
               </div>
               <div class="soluong d-flex">
-                <label class="font-weight-bold">Số lượng: </label>
+                <label class="font-weight-bold">Quantity: </label>
                 <div class="input-number input-group mb-3">
                  <!-- <div class="input-group-prepend">
                     <span class="input-group-text btn-spin btn-dec">-</span>
@@ -325,7 +325,7 @@
                 </div>
               </div>
               <input type="hidden" id="productId" th:value="${product.id}"/>
-              <div  class="nutmua btn w-100 text-uppercase">Chọn mua</div>
+              <div  class="nutmua btn w-100 text-uppercase">Choose buy</div>
               <!--<a class="huongdanmuahang text-decoration-none" href="#">(Vui lòng xem hướng dẫn mua
                 hàng)</a>
               <small class="share">Share: </small>-->
@@ -337,10 +337,10 @@
             <div class="col-md-5">
               <div class="thongtinsach">
                 <ul>
-                  <li>Danh mục: <a th:href="'/public/product/'+${product.category.id}" class="tacgia" th:text="${product.category.name}">Brian Finch</a></li>
-                  <li>Ngày thêm: <b th:text="${product.createdAt}">04-2020</b></li>
-                  <li>Kho: <b th:text="${product.quantity}+ ' sản phẩm'">20.5 x 13.5 cm</b></li>
-                  <li>Lượt xem: <b th:text="${product.viewCount}">Bìa mềm</b></li>
+                  <li>Category: <a th:href="'/public/product/'+${product.category.id}" class="tacgia" th:text="${product.category.name}">Brian Finch</a></li>
+                  <li>Created: <b th:text="${product.createdAt}">04-2020</b></li>
+                  <li>Warehouse: <b th:text="${product.quantity}+ ' product'">20.5 x 13.5 cm</b></li>
+                  <li>View: <b th:text="${product.viewCount}">Bìa mềm</b></li>
                 </ul>
               </div>
             </div>
@@ -354,7 +354,7 @@
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
               <a class="nav-item nav-link active text-uppercase" id="nav-gioithieu-tab"
                  data-toggle="tab" href="#nav-gioithieu" role="tab" aria-controls="nav-gioithieu"
-                 aria-selected="true">Giới thiệu sản phẩm</a>
+                 aria-selected="true">Product introduction</a>
 <!--              <a class="nav-item nav-link text-uppercase" id="nav-danhgia-tab" data-toggle="tab"-->
 <!--                 href="#nav-danhgia" role="tab" aria-controls="nav-danhgia"-->
 <!--                 aria-selected="false">Đánh-->
@@ -370,7 +370,7 @@
             <div class="tab-pane fade" id="nav-danhgia" role="tabpanel" aria-labelledby="nav-danhgia-tab">
               <div class="row">
                 <div class="col-md-8 ">
-                  <p class="tieude">Danh sách bình luận</p>
+                  <p class="tieude">Comments List</p>
                   <th:block th:each="cmt,index : ${listC}">
                   <div style="margin-bottom: 5px;width : 500px;background-color: #DDDDDD;padding: 5px;">
                     <strong style="width : 30px;display: inline" th:text="${cmt.user.fullName}"></strong> : <span th:text="${cmt.text}"></span>
@@ -378,7 +378,7 @@
                     <th:block/>
                 </div>
                 <div class="col-md-4" th:if="${session.user}">
-                      <p class="tieude">Đánh giá của bạn</p>
+                      <p class="tieude">Your review</p>
                       <form action="/public/product/comment" method="post">
                         <input type="hidden" th:value="${product.id}" name="id">
                         <div class="form-label-group">
@@ -392,10 +392,10 @@
                           </select>
                         </div>
                         <div class="form-label-group">
-                          <textarea class="form-control" name="text" rows="5">Nhập đánh giá</textarea>
+                          <textarea class="form-control" name="text" rows="5">Enter a review</textarea>
                         </div>
                         <button class="btn btn-lg text-white mt-3" type="submit"
-                                style="background: #F5A623">Gửi đánh giá</button>
+                                style="background: #F5A623">Submit a review</button>
                       </form>
                 </div>
               </div>
@@ -422,8 +422,8 @@
       <div class="row">
         <!--header-->
         <div class="col-12 d-flex justify-content-between align-items-center pb-2 bg-light pt-4">
-          <h5 class="header text-uppercase" style="font-weight: 400;">Sản phẩm tương tự</h5>
-          <a href="/public/product/all" class="btn btn-warning btn-sm text-white">Xem tất cả</a>
+          <h5 class="header text-uppercase" style="font-weight: 400;">Similar product</h5>
+          <a href="/public/product/all" class="btn btn-warning btn-sm text-white">View all</a>
         </div>
       </div>
       <div class="khoisanpham" style="padding-bottom: 2rem;">
@@ -434,7 +434,8 @@
                data-placement="bottom" title="Lập Kế Hoạch Kinh Doanh Hiệu Quả">
               <img class="card-img-top anh" style="height: 400px !important;" th:src="'/resources/uploads/' + ${product.image}" alt="lap-ke-hoach-kinh-doanh-hieu-qua">
               <div class="card-body noidungsp mt-3">
-                <h6 class="card-title ten" th:text="${product.name}">Lập Kế Hoạch Kinh Doanh Hiệu Quả</h6>
+                <h6 class="card-title ten" th:text="${product.name}">
+                  Make an Effective Business Plan</h6>
                 <small class="tacgia text-muted" th:text="${product.category.name}">Brian Finch</small>
                 <div class="gia d-flex align-items-baseline">
                   <div class="giamoi" th:text="${#numbers.formatCurrency(product.price - (product.price * product.discount / 100))}"></div>
@@ -448,7 +449,7 @@
                     <li class="active"><i class="fa fa-star"></i></li>
                     <li class="active"><i class="fa fa-star"></i></li>
                     <li><i class="fa fa-star"></i></li>
-                    <li><span class="text-muted" th:text="${product.viewCount} + ' lượt xem'">0 nhận xét</span></li>
+                    <li><span class="text-muted" th:text="${product.viewCount} + ' view'">0 review</span></li>
                   </ul>
                 </div>
               </div>
