--- a/src/main/webapp/WEB-INF/templates/public/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/public/fragments.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
 
 <head th:fragment="html_head">
-  <title>Website bán hàng</title>
+  <title>Website</title>
   <meta name="description"
         content="Mua sách online hay, giá tốt nhất, combo sách hot bán chạy, giảm giá cực khủng cùng với những ưu đãi như miễn phí giao hàng, quà tặng miễn phí, đổi trả nhanh chóng. Đa dạng sản phẩm, đáp ứng mọi nhu cầu.">
   <meta name="keywords" content="nhà sách online, mua sách hay, sách hot, sách bán chạy, sách giảm giá nhiều">
@@ -87,7 +87,7 @@
                     success: function (data) {
                       if(data == "exist"){
                         swal({
-                          title: 'Email đã tồn tại!',
+                          title: 'Email is existed!',
                           /* text: 'Redirecting...', */
                           icon: 'error',
                           timer: 3000,
@@ -96,7 +96,7 @@
                         })
                       }else if(data == "true"){
                         swal({
-                          title: 'Đăng kí thành công!',
+                          title: 'Register successfully!',
                           /* text: 'Redirecting...', */
                           icon: 'success',
                           timer: 5000,
@@ -121,7 +121,7 @@
       var email = $('#email1').val();
       if (password == ''  || email == '' ){
         swal({
-          title: 'Cần điền đầy đủ thông tin!',
+          title: 'You need to fill in all the information!',
           /* text: 'Redirecting...', */
           icon: 'error',
           timer: 3000,
@@ -143,7 +143,7 @@
                     success: function (data) {
                       if(data == "false_user"){
                         swal({
-                          title: 'Thông tin tài khoản không chính xác!',
+                          title: 'Username or password incorrect!',
                           /* text: 'Redirecting...', */
                           icon: 'error',
                           timer: 3000,
@@ -152,7 +152,7 @@
                         })
                       }else if(data == "true"){
                         swal({
-                          title: 'Đăng nhập thành công !',
+                          title: 'Login sucessfully!',
                           /* text: 'Redirecting...', */
                           icon: 'success',
                           timer: 3000,
@@ -164,7 +164,7 @@
                         }, 2000);
                       } else {
                         swal({
-                          title: 'Tài khoản chưa xác thực vui lòng check mail!',
+                          title: 'Unverified account please check mail!',
                           /* text: 'Redirecting...', */
                           icon: 'error',
                           timer: 3000,
@@ -209,7 +209,7 @@
       <form action="/public/product/search" method="post" class="form-inline ml-auto my-2 my-lg-0 mr-3">
         <div class="input-group" style="width: 520px;">
           <input type="text" name="keyWord" class="form-control" aria-label="Small"
-                 placeholder="Nhập sản phẩm cần tìm kiếm..." required>
+                 placeholder="Enter the product you are looking for..." required>
           <div class="input-group-append">
             <button type="submit" class="btn" style="background-color: #CF111A; color: white;">
               <i class="fa fa-search"></i>
@@ -230,34 +230,31 @@
             <div class="cart-amount" id="numberCart" th:text="${session.order.getItemModels().size()}" >0</div>
           </a>
           <a class="nav-link text-dark giohang text-uppercase" href="/public/cart/index"
-             style="display:inline-block">Giỏ
-            Hàng</a>
+             style="display:inline-block">Cart</a>
         </li>
         <div class="dropdown">
           <li  th:unless="${session.user}" type="button" class="btn dropdown" data-toggle="dropdown">
             <a href="#" class="btn btn-secondary rounded-circle">
               <i class="fa fa-user"></i>
             </a>
-            <a class="nav-link text-dark text-uppercase" href="#" style="display:inline-block">Tài
-              khoản</a>
+            <a class="nav-link text-dark text-uppercase" href="#" style="display:inline-block">Account</a>
           </li>
           <li  th:if="${session.user}" class="btn dropdown" data-toggle="dropdown">
             <a href="#" class="btn btn-secondary rounded-circle">
               <i class="fa fa-user"></i>
             </a>
-            <a class="nav-link text-dark text-uppercase" href="#" th:text="${session.user.fullName}" style="display:inline-block">Tài
-              khoản</a>
+            <a class="nav-link text-dark text-uppercase" href="#" th:text="${session.user.fullName}" style="display:inline-block">Account</a>
           </li>
           <div th:unless="${session.user}" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item nutdangky text-center mb-2" href="#" data-toggle="modal"
-               data-target="#formdangky">Đăng ký</a>
+               data-target="#formdangky">Register</a>
             <a class="dropdown-item nutdangnhap text-center" href="#" data-toggle="modal"
-               data-target="#formdangnhap">Đăng nhập</a>
+               data-target="#formdangnhap">Login</a>
           </div>
 
           <div th:if="${session.user}" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item nutdangky text-center mb-2" href="/public/user/order" >Lịch sử đặt hàng</a>
-            <a class="dropdown-item nutdangky text-center mb-2" href="/public/user/logout" >Đăng xuất</a>
+            <a class="dropdown-item nutdangky text-center mb-2" href="/public/user/order" >Order history</a>
+            <a class="dropdown-item nutdangky text-center mb-2" href="/public/user/logout" >Logout</a>
 
           </div>
         </div>
@@ -276,11 +273,11 @@
       <div class="modal-header">
         <ul class="tabs d-flex justify-content-around list-unstyled mb-0">
           <li class="tab tab-dangnhap text-center">
-            <a class=" text-decoration-none">Đăng nhập</a>
+            <a class=" text-decoration-none">Login</a>
             <hr>
           </li>
           <li class="tab tab-dangky text-center">
-            <a class="text-decoration-none">Đăng ký</a>
+            <a class="text-decoration-none">Register</a>
             <hr>
           </li>
         </ul>
@@ -291,35 +288,35 @@
       <div class="modal-body">
         <form id="form-signup" class="form-signin mt-2">
           <div class="form-label-group">
-            <input type="text" class="form-control" placeholder="Nhập họ và tên" name="fullName" id="fullName" required
+            <input type="text" class="form-control" placeholder="Enter fullname" name="fullName" id="fullName" required
                    autofocus>
           </div>
           <div class="form-label-group">
-            <input type="text" class="form-control" placeholder="Nhập số điện thoại" name="phoneNumber" id="phoneNumber"
+            <input type="text" class="form-control" placeholder="Enter phone number" name="phoneNumber" id="phoneNumber"
                    required>
           </div>
 
           <div class="form-label-group">
-            <input type="email" class="form-control" placeholder="Nhập địa chỉ email" name="email" id="email"
+            <input type="email" class="form-control" placeholder="Enter address" name="email" id="email"
                    required>
           </div>
           <div  class="form-label-group">
-            <input type="password" class="form-control" placeholder="Nhập mật khẩu" name="password" id="password"
+            <input type="password" class="form-control" placeholder="Enter password" name="password" id="password"
                    required>
           </div>
           <div  class="form-label-group">
-            <input type="password" class="form-control" placeholder="Nhập lại mật khẩu" name="rePassword" id="rePassword"
+            <input type="password" class="form-control" placeholder="Enter rePassword" name="rePassword" id="rePassword"
                    required>
           </div>
           <p id="err" style="color: red"></p>
           <button class="btn btn-lg btn-block btn-signin text-uppercase text-white mt-3" onclick="register()"  type="button"
-                  style="background: #F5A623">Đăng ký</button>
+                  style="background: #F5A623">Register</button>
           <hr class="mt-3 mb-2">
 
           <div class="custom-control custom-checkbox">
-            <p class="text-center">Bằng việc đăng ký, bạn đã đồng ý với Fashion_Store </p>
-            <a href="#" class="text-decoration-none text-center" style="color: #F5A623">Điều khoản dịch
-              vụ & Chính sách bảo mật</a>
+            <p class="text-center">By registering, you agree to Fashion_Store </p>
+            <a href="#" class="text-decoration-none text-center" style="color: #F5A623">Translation Terms
+              Service & Privacy Policy</a>
           </div>
         </form>
       </div>
@@ -336,11 +333,11 @@
       <div class="modal-header">
         <ul class="tabs d-flex justify-content-around list-unstyled mb-0">
           <li class="tab tab-dangnhap text-center">
-            <a class=" text-decoration-none">Đăng nhập</a>
+            <a class=" text-decoration-none">Login</a>
             <hr>
           </li>
           <li class="tab tab-dangky text-center">
-            <a class="text-decoration-none">Đăng ký</a>
+            <a class="text-decoration-none">Register</a>
             <hr>
           </li>
         </ul>
@@ -351,12 +348,12 @@
       <div class="modal-body">
         <form id="form-signin" class="form-signin mt-2">
           <div class="form-label-group">
-            <input type="email" class="form-control" placeholder="Nhập địa chỉ email" name="email" id="email1"
+            <input type="email" class="form-control" placeholder="Enter email" name="email" id="email1"
                    required autofocus>
           </div>
 
           <div class="form-label-group">
-            <input type="password" class="form-control" placeholder="Mật khẩu" name="password" id="password1" required>
+            <input type="password" class="form-control" placeholder="Password" name="password" id="password1" required>
           </div>
 
 <!--          <div class="custom-control custom-checkbox mb-3">-->
@@ -367,7 +364,7 @@
 <!--          </div>-->
 
           <button class="btn btn-lg btn-block btn-signin text-uppercase text-white" onclick="login()" type="button"
-                  style="background: #F5A623">Đăng nhập</button>
+                  style="background: #F5A623">Login</button>
           <hr class="my-4">
 <!--          <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i-->
 <!--                  class="fab fa-google mr-2"></i> Đăng nhập bằng Google</button>-->
@@ -388,7 +385,7 @@
         <div class="categoryheader">
           <div class="noidungheader text-white">
             <i class="fa fa-bars"></i>
-            <span class="text-uppercase font-weight-bold ml-1">Danh mục sản phẩm</span>
+            <span class="text-uppercase font-weight-bold ml-1">Product portfolio</span>
           </div>
         </div>
       </div>
@@ -399,7 +396,8 @@
             <span>Hotline:<b>1900 1999</b> </span>
           </div>
           <i class="fas fa-comments-dollar"></i>
-          <a href="#">Hỗ trợ trực tuyến </a>
+          <a href="#">Online support
+          </a>
         </div>
       </div>
     </div>
@@ -1143,34 +1141,42 @@
         <div class="dichvu d-flex align-items-center">
 
           <div class="noidung">
-            <h3 class="tieude font-weight-bold">HƠN 14.000 SẢN PHẨM</h3>
-            <p class="detail">Mới - Chất lượng - Tiện nghi</p>
+            <h3 class="tieude font-weight-bold">
+              MORE THAN 14,000 PRODUCTS</h3>
+            <p class="detail">
+              New - Quality - Comfort</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6">
         <div class="dichvu d-flex align-items-center">
           <div class="noidung">
-            <h3 class="tieude font-weight-bold">MIỄN PHÍ GIAO HÀNG</h3>
-            <p class="detail">Từ 1.500.000đ ở TP.Đà Nẵng</p>
-            <p class="detail">Từ 3.000.000đ ở tỉnh thành khác</p>
+            <h3 class="tieude font-weight-bold">
+              FREE SHIP</h3>
+            <p class="detail">
+              From 1,500,000 VND in Da Nang city</p>
+            <p class="detail">From 3,000,000 VND in other provinces</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6">
         <div class="dichvu d-flex align-items-center">
           <div class="noidung">
-            <h3 class="tieude font-weight-bold">QUÀ TẶNG MIỄN PHÍ</h3>
-            <p class="detail">Tặng lót chuột</p>
-            <p class="detail">Ốp lưng miễn phí</p>
+            <h3 class="tieude font-weight-bold">
+              FREE GIFTS</h3>
+            <p class="detail">Give away mouse pad</p>
+            <p class="detail">
+              Free Cases</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6">
         <div class="dichvu d-flex align-items-center">
           <div class="noidung">
-            <h3 class="tieude font-weight-bold">ĐỔI TRẢ NHANH CHÓNG</h3>
-            <p class="detail">Hàng bị lỗi được đổi trả nhanh chóng</p>
+            <h3 class="tieude font-weight-bold">
+              QUICK REFUND</h3>
+            <p class="detail">
+              Faulty goods can be returned quicklyg</p>
           </div>
         </div>
       </div>
@@ -1184,9 +1190,11 @@
     <div class="row">
       <div class="col-md-3 col-xs-6">
         <div class="gioithieu">
-          <h3 class="header text-uppercase font-weight-bold">Về Fashion_Store</h3>
-          <a href="#">Giới thiệu về Fashion_Store</a>
-          <a href="#">Tuyển dụng</a>
+          <h3 class="header text-uppercase font-weight-bold">About Fashion_Store</h3>
+          <a href="#">
+            Introduce about Fashion_Store</a>
+          <a href="#">
+            Recruit</a>
           <div class="fb-like" data-href="https://www.facebook.com/DealBook-110745443947730/"
                data-width="300px" data-layout="button" data-action="like" data-size="small"
                data-share="true"></div>
@@ -1194,22 +1202,28 @@
       </div>
       <div class="col-md-3 col-xs-6">
         <div class="hotrokh">
-          <h3 class="header text-uppercase font-weight-bold">HỖ TRỢ KHÁCH HÀNG</h3>
-          <a href="#">Hướng dẫn đặt hàng</a>
-          <a href="#">Phương thức thanh toán</a>
-          <a href="#">Phương thức vận chuyển</a>
-          <a href="#">Chính sách đổi trả</a>
+          <h3 class="header text-uppercase font-weight-bold">CUSTOMER SUPPORT</h3>
+          <a href="#">
+            Ordering guide</a>
+          <a href="#">
+            Payment methods</a>
+          <a href="#">
+            Shipping method</a>
+          <a href="#">
+            Return Policy</a>
         </div>
       </div>
       <div class="col-md-3 col-xs-6">
         <div class="lienket">
-          <h3 class="header text-uppercase font-weight-bold">HỢP TÁC VÀ LIÊN KẾT</h3>
+          <h3 class="header text-uppercase font-weight-bold">
+            COOPERATION AND LINKS</h3>
 
         </div>
       </div>
       <div class="col-md-3 col-xs-6">
         <div class="ptthanhtoan">
-          <h3 class="header text-uppercase font-weight-bold">Phương thức thanh toán</h3>
+          <h3 class="header text-uppercase font-weight-bold">
+            Payment methods</h3>
           <img th:src="@{/public/images/visa-payment.jpg}" alt="visa-payment">
           <img th:src="@{/public/images/master-card-payment.jpg}" alt="master-card-payment">
           <img th:src="@{/public/images/jcb-payment.jpg}" alt="jcb-payment">
